@@ -135,9 +135,18 @@ class GO_Addressbook_Controller_Contact extends GO_Base_Controller_AbstractModel
 		if($company){					
 			$response['data']['company_name'] = $company->name;
 			$response['data']['company_name2'] = $company->name2;
+			$response['data']['company_formatted_address'] = nl2br($company->getFormattedAddress());
+			$response['data']['company_google_maps_link']=GO_Base_Util_Common::googleMapsLink(
+						$company->address, $company->address_no,$company->city, $company->country);
+			$response['data']['company_email'] = $company->email;
+			$response['data']['company_phone'] = $company->phone;
 		} else {
 			$response['data']['company_name'] = '';
 			$response['data']['company_name2'] = '';
+			$response['data']['company_formatted_address'] = '';
+			$response['data']['company_google_maps_link']='';
+			$response['data']['company_email'] = '';
+			$response['data']['company_phone'] = '';
 		}
 		
 		$response['data']['google_maps_link']=GO_Base_Util_Common::googleMapsLink(
