@@ -25,7 +25,8 @@ $l["cmdFormCompanyEmptyText"]= 'Please select a company';
 $l["cmdFieldsetSelectAddressbook"]= 'Select address book';
 $l["cmdFieldsetPersonalDetails"]= 'Personal details';
 $l["cmdFieldsetAddress"]= 'Address';
-$l["cmdFieldsetContact"]= 'Contact details';
+$l["cmdFieldsetContact"]= 'Contact details (private)';
+$l["cmdFieldsetCompany"]= 'Company details';
 $l["cmdFieldsetWork"]= 'Work';
 $l["cmdPanelContact"]= 'Contact details';
 $l["cmdPanelComments"]= 'Comments';
