@@ -49,7 +49,8 @@ $l["cmdFormCompanyEmptyText"]= 'Selecteer een bedrijf';
 $l["cmdFieldsetSelectAddressbook"]= 'Selecteer een adresboek';
 $l["cmdFieldsetPersonalDetails"]= 'Persoonlijke gegevens';
 $l["cmdFieldsetAddress"]= 'Adres';
-$l["cmdFieldsetContact"]= 'Contact gegevens';
+$l["cmdFieldsetContact"]= 'Contactgegevens (privé)';
+$l["cmdFieldsetCompany"]= 'Bedrijfsgegevens';
 $l["cmdFieldsetWork"]= 'Werk';
 $l["cmdPanelContact"]= 'Contact gegevens';
 $l["cmdPanelComments"]= 'Opmerkingen';
